force-app/main/default/objects/Funnel_Overlay__mdt/Funnel_Overlay__mdt.object-meta.xml
<CustomObject>
    <label>Funnel Overlay</label>
    <pluralLabel>Funnel Overlay</pluralLabel>
</CustomObject>