force-app/main/default/objects/Funnel_Overlay__mdt/fields/Amount_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field_Name__c</fullName>
    <label>Amount Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>