force-app/main/default/objects/Funnel_Overlay__mdt/fields/Date_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_Name__c</fullName>
    <label>Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>