force-app/main/default/objects/Funnel_Overlay__mdt/fields/Split_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Split_Field_Name__c</fullName>
    <label>Split % Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>